docs: simplify README for beginners with step-by-step guide