@@ -4,110 +4,147 @@
 ![Build](https://img.shields.io/badge/build-passing-brightgreen)
 ![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)
 
-A production-quality, public-safe ML inference orchestration SDK for latency-sensitive backend services.
+## 📖 What is this library?
+At its core, this is a **traffic controller for Machine Learning models** in Java. If your backend application needs to ask an AI/ML model for predictions, scores, or rankings, this SDK ensures that those requests happen incredibly fast and never crash your application.
 
-In modern ML architectures, evaluating a single user request often requires scoring hundreds or thousands of candidates against multiple machine learning models. A naive implementation—calling remote model serving endpoints in a `for` loop—results in a **latency explosion**, network saturation, and frequent SLA breaches.
+## 🛑 The Problem: "Latency Explosion"
+Imagine you are building an e-commerce app. A user searches for "sneakers". Your database finds **1,000** matching sneakers. Now, you want to use a Machine Learning (ML) model to score and rank them so the best sneakers show up at the top of the page.
 
-This SDK solves this by treating online ML inference as a **strict execution graph (DAG) problem**, applying database-style query optimizations (pruning, batching, deduplication) to machine learning inference.
+* **The Naive Approach:** You loop through the 1,000 sneakers and send 1,000 separate network requests to your remote ML model.
+* **The Result:** The network gets clogged, the remote model gets overwhelmed, and the search takes 5 seconds to load. The user gets frustrated and leaves.
 
----
-
-## 🧠 Core Logic & Execution Flow
-
-The SDK operates on a **Research -> Plan -> Execute** lifecycle for every incoming request:
-
-1. **Contextual Routing:** An incoming `RequestContext` (containing candidate entities and request attributes) is evaluated against declarative `RoutingRule`s. The engine determines exactly which models need to be executed for this specific request.
-2. **Topological Planning (DAG):** The `ExecutionPlanner` recursively resolves model dependencies. It builds a Directed Acyclic Graph (DAG) and sorts the models into parallel execution stages. (e.g., If Model C depends on Models A and B, A and B are placed in Stage 0 to run in parallel, and C is placed in Stage 1).
-3. **Optimized Execution:** The `InferenceExecutor` processes the DAG asynchronously using `CompletableFuture`s. 
-   - **Deduplication:** Identical feature vectors within the request are computed only once.
-   - **Lazy Pruning:** Candidates are filtered between stages (e.g., only pass the Top 10 results from Stage 0 to Stage 1).
-   - **Batching:** Candidates are grouped into optimal chunk sizes to minimize remote network overhead.
-4. **Resiliency & Fallbacks:** Strict global request deadlines and per-model timeouts are enforced. Retries are strictly banned on the hot path. If a model times out, the executor seamlessly applies a configured `FallbackStrategy` (e.g., `CONSTANT_SCORE`, `DEFAULT_OUTPUT`) and continues the DAG execution.
+## 💡 The Solution
+This SDK solves this problem by treating ML inference like a smart pipeline:
+1. **Lazy Pruning (Filtering early):** Instead of sending 1,000 items to a heavy remote model, the SDK first runs a super-fast, lightweight model *locally* on your server. It drops the bottom 900 items, and only sends the top 100 to the heavy remote model.
+2. **Batching (Grouping):** Instead of sending 100 individual requests, the SDK groups them into 2 batches of 50, drastically cutting down network traffic.
+3. **Deduplication:** If two items have the exact same features, the SDK only calculates the score once and reuses the answer.
+4. **Strict Deadlines & Fallbacks:** If the remote model takes longer than 50 milliseconds to answer, the SDK cuts it off. Instead of crashing or waiting forever, it returns a safe "default score" so the user still gets their search results instantly.
 
 ---
 
-## 🎯 Enterprise Use Cases & Applications
+## 🛠️ Step-by-Step: How to Use This Library
 
-This SDK is designed for high-throughput systems where milliseconds matter.
+Using this SDK requires three simple steps: define your models, set up your rules, and run the executor.
 
-### 1. Multi-Stage Search & Recommendation Ranking
-* **The Problem:** You have 1,000 document candidates to rank for a search query. Sending all 1,000 to a heavy remote Deep Neural Network (DNN) takes 500ms (unacceptable).
-* **The Application:** 
-  - **Stage 1 (Local):** Route all 1,000 candidates through a lightweight `light_ranker` running entirely locally in the JVM using our **Java Vector API (SIMD)** integration. Latency: ~5ms.
-  - **Pruning:** A lazy predicate automatically drops the bottom 950 candidates.
-  - **Stage 2 (Remote):** Batch the remaining 50 candidates and send them to the heavy remote `deep_ranker`. Latency: ~40ms.
-  - **Result:** Full deep ranking achieved in < 50ms.
+### Step 1: Define your Models (`model-registry.yaml`)
+You tell the SDK what models exist, how long they are allowed to take (`timeoutMs`), and what to do if they fail (`fallbackStrategy`).
 
-### 2. Fraud Detection & Risk Scoring
-* **The Problem:** A checkout transaction must be evaluated by 5 different fraud models (IP risk, device fingerprinting, behavioral analysis) before approval. If one model is slow, the user abandons the checkout.
-* **The Application:** The SDK plans the 5 models as parallel, independent nodes in a DAG. A strict 100ms deadline is enforced. If the `behavioral_analysis` model times out, the SDK catches it, emits a trace event, applies a `CONSTANT_SCORE` fallback (e.g., moderate risk), and allows the transaction to proceed without failing the entire checkout.
+```yaml
+models:
+  - modelId: my_heavy_ranker
+    backendType: REMOTE
+    timeoutMs: 50         # If it takes > 50ms, cut it off!
+    maxBatchSize: 32      # Send 32 items at a time
+    fallbackStrategy:
+      type: CONSTANT_SCORE
+      value: 0.5          # If it fails, just give everything a score of 0.5
+```
 
-### 3. Content Personalization Pipelines
-* **The Problem:** Generating a personalized feed requires running identical user embeddings against hundreds of different items. 
-* **The Application:** The SDK's native **Deduplication** cache recognizes repeated user feature vectors within the request boundary, computing the heavy embedding transformations only once and sharing the result across all item candidate evaluations.
+### Step 2: Define your Routing Rules (`routing-rules.yaml`)
+You tell the SDK *when* to use these models. For example, if a request is a "SEARCH", use the ranker.
+
+```yaml
+rules:
+  - ruleId: run_search_models
+    priority: 100
+    enabled: true
+    condition:
+      requestType: SEARCH
+    selectedModels:
+      - my_heavy_ranker
+```
+
+### Step 3: Run the Java Code
+Here is how you trigger the process in your application:
+
+```java
+// 1. Load your configurations
+ModelRegistry registry = new ModelRegistry();
+ConfigurationLoader.loadModels(new FileInputStream("model-registry.yaml")).forEach(registry::register);
+RoutingEngine routingEngine = new RoutingEngine(ConfigurationLoader.loadRules(new FileInputStream("routing-rules.yaml")));
+
+// 2. Setup your Executor (The traffic controller)
+InferenceExecutor executor = new InferenceExecutor(myModelClient, threadPool, scheduler, metrics);
+
+// 3. Create a Request (e.g., User searches for something)
+RequestContext context = new RequestContext(
+    "req-123", "SEARCH", Instant.now(), Instant.now().plusMillis(200), // Global 200ms deadline!
+    Map.of(), myListOfCandidates, Map.of()
+);
+
+// 4. Execute! The SDK automatically batches, dedups, and enforces timeouts.
+Set<String> selectedModels = routingEngine.route(context);
+InferencePlan plan = new ExecutionPlanner(registry).plan(selectedModels);
+
+InferenceResult result = executor.execute(plan, context).get();
+
+System.out.println("Final Scores: " + result.outputsByModel());
+```
 
 ---
 
-## 🏗️ System Architecture
+## 🏗️ System Architecture (Under the Hood)
+
+When you ask the SDK to execute models, it builds a **Directed Acyclic Graph (DAG)**. This means it figures out what models depend on other models and runs independent ones in parallel.
 
 ```mermaid
 graph TD
     A[Incoming Request] --> B[Routing Engine]
     B -->|Resolves Rules| C[Execution Planner]
-    C -->|Builds DAG| D[Inference Executor]
+    C -->|Builds Execution Graph| D[Inference Executor]
     
-    subgraph Execution Pipeline
-        D -->|Stage 1| E(Batch Light Models)
-        E -->|Dedup| F[Local Vector Engine SIMD]
-        E -->|Dedup| G[Remote Light Ranker]
+    subgraph Parallel Execution Pipeline
+        D --> E(Batch Light Models)
+        E -->|Dedup cache| F[Run Local Fast Engine]
+        E -->|Dedup cache| G[Run Remote Light Ranker]
         
-        F -->|Lazy Prune| H(Batch Heavy Models)
-        G -->|Lazy Prune| H
+        F -->|Drop worst items| H(Batch Heavy Models)
+        G -->|Drop worst items| H
         
-        H --> I[Remote Deep Ranker]
-        H --> J[Remote Risk Scorer]
+        H --> I[Run Remote Deep Ranker]
+        H --> J[Run Remote Risk Scorer]
     end
     
-    I -->|Deadline Check| K[Fallback / Default]
+    I -->|Deadline Check| K[Apply Default Score if too slow]
     J -->|Success| L[Final Result Aggregation]
     K --> L
-    L --> M[Inference Result + Trace]
+    L --> M[Return Results to User]
 ```
 
-## 📦 Module Overview
+---
 
-- `ml-routing-core`: The framework-agnostic engine. Config parsing, registry, DAG planner, async executor.
-- `ml-routing-vector-inference`: Optional local inference engine using `jdk.incubator.vector` for extreme low-latency dense layer execution.
-- `ml-routing-examples`: Executable examples demonstrating low latency and DAG evaluation.
-- `ml-routing-benchmarks`: JMH benchmarks comparing naive vs optimized execution.
+## 📦 What's Inside this Repository?
 
-## 🚀 Quick Start & Requirements
+This is a Maven multi-module project:
+- `ml-routing-core`: The main library. Contains the logic for routing, batching, DAG planning, and fallbacks. No heavy frameworks (No Spring) so it boots instantly.
+- `ml-routing-vector-inference`: An optional add-on. It uses Java 21's new Vector API (SIMD) to run models directly on your CPU locally at lightning speed, avoiding network calls entirely.
+- `ml-routing-examples`: Fully runnable Java classes showing exactly how to use the code.
+- `ml-routing-benchmarks`: Speed tests comparing the naive approach vs. this SDK.
 
-Requires **Java 21** and Maven.
+## 🚀 Quick Start (Running the Code)
+
+You need **Java 21** and **Maven** installed on your machine.
 
 ```bash
-# Build the project
+# 1. Download and build the project
+git clone https://github.com/shivam61/ml-inference-routing-sdk.git
+cd ml-inference-routing-sdk
 mvn clean install
 
-# Run the Search Ranking Example
+# 2. Run the main Search Ranking Example
+# (This demonstrates local models, remote models, and fallbacks working together)
 mvn -pl ml-routing-examples exec:java -Dexec.mainClass="com.github.placeholder.mlinference.examples.SearchRankingExample"
 
-# Run the Deduplication Example
+# 3. Run the Deduplication Example
+# (This proves that duplicate items are only computed once)
 mvn -pl ml-routing-examples exec:java -Dexec.mainClass="com.github.placeholder.mlinference.examples.DedupExample"
-
-# If running the Vector module in your own app, you must enable the incubator module:
-java --add-modules jdk.incubator.vector -jar your-app.jar
 ```
 
-## 📚 Documentation
+## 📚 Deep Dive Documentation
 
+If you want to understand the advanced engineering behind this, check out our docs:
 - [Architecture Design](docs/architecture.md)
-- [Execution Model](docs/execution-model.md)
-- [Local Vectorized Inference](docs/local-vectorized-inference.md)
-- [Config Reference](docs/config-reference.md)
-- [Observability](docs/observability.md)
-- [Project Roadmap](docs/roadmap.md)
-
-## ⚖️ Tradeoffs & Design Decisions
-- **Why no Spring in core?** To maintain the lowest possible startup time and dependency surface area, enabling embedding in any Java framework (Netty, Vert.x, Spring Boot, Ktor).
-- **Why fail-fast / fallback instead of retries?** In p99 latency-sensitive applications (sub 50ms), a network timeout means the deadline is likely already blown. Retrying compounds the failure. Returning a safe fallback guarantees system stability.
+- [Execution Model (How Batching/Pruning works)](docs/execution-model.md)
+- [Local Vectorized Inference (SIMD)](docs/local-vectorized-inference.md)
+- [Configuration Reference](docs/config-reference.md)
+- [Observability (Metrics & Tracing)](docs/observability.md)
